Fix top intro text being cut off on mobile

--- a/page-builder-styles.css
+++ b/page-builder-styles.css
@@ -1,12 +1,30 @@
-@media screen and (min-width: 28.75em) {
+@media screen and (max-width: 330px) {
   form {
-      margin: -60px auto 60px !important;
+      margin: -130px auto 60px !important;
   }
 }
 
-@media screen and (min-width: 40em) {
+@media screen and (min-width: 331px) and (max-width: 399px) {
   form {
       margin: -160px auto 60px !important;
+  }
+}
+
+@media screen and (min-width: 400px) and (max-width: 459px) {
+  form {
+      margin: -250px auto 60px !important;
+  }
+}
+
+@media screen and (min-width: 460px) and (max-width: 639px) {
+  form {
+      margin: -90px auto 60px !important;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  form {
+      margin: -200px auto 60px !important;
   }
 }
 
